--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   },
   "homepage": "https://github.com/ApoTheOne/NodeJsPrac#readme",
   "dependencies": {
+    "nodemon": "^1.14.11",
     "request": "^2.87.0",
     "yargs": "^12.0.1"
   }
